--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
+    "css-select": "^5.1.0",
+    "css-tree": "^2.3.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.4",
     "react-native-image-progress": "^1.2.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0"
+    "react-native-screens": "^3.24.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-table-component": "^1.2.2",
+    "react-native-web": "^0.19.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
