--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
     "css-select": "^5.1.0",
     "css-tree": "^2.3.1",
@@ -25,6 +27,7 @@
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.13.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "^0.19.8"
   },
   "devDependencies": {
